fixed extra space

--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ main {
   border: solid 5px green;
 }
 
-.hobbyForm {
-  background-color: #104ade;
+#hobbyForm {
+  background-color: #1651e6;
   padding: 20px;
   max-width: 300px;
   margin-left: auto;
@@ -38,6 +38,11 @@ main {
   position: relative;
   z-index: 1;
 }
+
+#hobbyForm:hover {
+  transform: scale(1.5);
+}
+
 
 body{
   background-image: url("../background.jpg");
@@ -177,6 +182,17 @@ src: url('path-to-font-file.woff2') format('woff2'),
 
 }
 
+.resultsBox {
+  background-color: #104ade;
+  padding: 30px;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  z-index: 1;
+  border: solid 2px yellow;
+}
+
 .main-container {
 display: flex;
 justify-content: space-evenly;
@@ -191,15 +207,21 @@ display: flex;
 justify-content: center;
 align-items: center;
 
+
+
 }
 .logoGen h1 {
   font-size: 1.75rem;
   font-family: 'Bungee Shade', cursive;
   color: #000000;
   background-color: #f2f2f2;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   z-index: 1;
     padding: 5px;
+    border: 5px groove rgb(229, 9, 9)
 }
+
+
 
 .preferences {
 height: 40px;
@@ -240,16 +262,19 @@ align-items: center;
 
 
 .falling-images-wrapper {
-  transform: translateY(-50%);
+  /* transform: translateY(-50%); */
   display: flex;
+  /* flex-wrap: wrap; */
+  gap: 50px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: flowImages 20s linear infinite;
+  /* animation: flowImages 20s linear infinite; */
   overflow: hidden;
   border: solid 2px pink;
   width: 50%;
-  max-height: 250vh;
+  max-height: 100vh;
+  /* margin-top: 200px; */
   
 
 }
@@ -259,7 +284,9 @@ align-items: center;
   width: 300px; 
   height: 300px; 
   animation: fall 15s linear infinite;
-  margin-bottom: 50px;
+  /* margin-bottom: 50px; */
+  object-fit: cover;
+  
   
 }
 
